--- a/index.html
+++ b/index.html
@@ -30,7 +30,7 @@
           >
           <ul class="list">
             <li class="item">
-              <a class="link" href="./index.html">Studio</a>
+              <a class="link current" href="./index.html">Studio</a>
             </li>
             <li class="item">
               <a class="link" href="./portfolio.html">Portfolio</a>
@@ -58,7 +58,9 @@
       <section class="hero">
         <div class="container">
           <h1 class="title">Effective Solutions for Your Business</h1>
-          <button class="button" type="button">Order Service</button>
+          <button class="button" type="button" data-modal-open>
+            Order Service
+          </button>
         </div>
       </section>
       <section class="advantages">
@@ -66,6 +68,11 @@
           <h2 class="visually-hidden">Advantages</h2>
           <ul class="list">
             <li class="item">
+              <div class="wripper">
+                <svg class="icon" width="64" height="64">
+                  <use href="'./images/icons.svg#icon-antenna"></use>
+                </svg>
+              </div>
               <h3 class="title">Strategy</h3>
               <p class="text">
                 Our goal is to identify the business problem to walk away with
@@ -73,6 +80,11 @@
               </p>
             </li>
             <li class="item">
+              <div class="wripper">
+                <svg class="icon" width="64" height="64">
+                  <use href="'./images/icons.svg#icon-clock"></use>
+                </svg>
+              </div>
               <h3 class="title">Punctuality</h3>
               <p class="text">
                 Bring the key message to the brand's audience for the best price
@@ -80,6 +92,11 @@
               </p>
             </li>
             <li class="item">
+              <div class="wripper">
+                <svg class="icon" width="64" height="64">
+                  <use href="'./images/icons.svg#icon-diagram"></use>
+                </svg>
+              </div>
               <h3 class="title">Diligence</h3>
               <p class="text">
                 Research and confirm brands that present the strongest digital
@@ -87,6 +104,11 @@
               </p>
             </li>
             <li class="item">
+              <div class="wripper">
+                <svg class="icon" width="64" height="64">
+                  <use href="'./images/icons.svg#icon-astronaut"></use>
+                </svg>
+              </div>
               <h3 class="title">Technologies</h3>
               <p class="text">
                 Design practice focused on digital experiences. We bring forth a
@@ -145,6 +167,56 @@
               <div class="wripper">
                 <h3 class="name">Mark Guerrero</h3>
                 <p class="position">Product Designer</p>
+                <ul class="social-list">
+                  <li class="item">
+                    <a class="link" href="">
+                      <svg
+                        class="icon"
+                        width="40"
+                        height="40"
+                        aria-label="instagram icon"
+                      >
+                        <use href="'./images/icons.svg#icon-instagram"></use>
+                      </svg>
+                    </a>
+                  </li>
+                  <li class="item">
+                    <a class="link" href="">
+                      <svg
+                        class="icon"
+                        width="40"
+                        height="40"
+                        aria-label="twitter icon"
+                      >
+                        <use href="'./images/icons.svg#icon-twitter"></use>
+                      </svg>
+                    </a>
+                  </li>
+                  <li class="item">
+                    <a class="link" href="">
+                      <svg
+                        class="icon"
+                        width="40"
+                        height="40"
+                        aria-label="facebook icon"
+                      >
+                        <use href="'./images/icons.svg#icon-facebook"></use>
+                      </svg>
+                    </a>
+                  </li>
+                  <li class="item">
+                    <a class="link" href="">
+                      <svg
+                        class="icon"
+                        width="40"
+                        height="40"
+                        aria-label="linkedin icon"
+                      >
+                        <use href="'./images/icons.svg#icon-linkedin"></use>
+                      </svg>
+                    </a>
+                  </li>
+                </ul>
               </div>
             </li>
             <li class="item">
@@ -158,6 +230,36 @@
               <div class="wripper">
                 <h3 class="name">Tom Ford</h3>
                 <p class="position">Frontend Developer</p>
+                <ul class="social-list">
+                  <li class="item">
+                    <a class="link" href="">
+                      <svg class="icon" width="40" height="40">
+                        <use href="'./images/icons.svg#icon-instagram"></use>
+                      </svg>
+                    </a>
+                  </li>
+                  <li class="item">
+                    <a class="link" href="">
+                      <svg class="icon" width="40" height="40">
+                        <use href="'./images/icons.svg#icon-twitter"></use>
+                      </svg>
+                    </a>
+                  </li>
+                  <li class="item">
+                    <a class="link" href="">
+                      <svg class="icon" width="40" height="40">
+                        <use href="'./images/icons.svg#icon-facebook"></use>
+                      </svg>
+                    </a>
+                  </li>
+                  <li class="item">
+                    <a class="link" href="">
+                      <svg class="icon" width="40" height="40">
+                        <use href="'./images/icons.svg#icon-linkedin"></use>
+                      </svg>
+                    </a>
+                  </li>
+                </ul>
               </div>
             </li>
             <li class="item">
@@ -171,6 +273,36 @@
               <div class="wripper">
                 <h3 class="name">Camila Garcia</h3>
                 <p class="position">Marketing</p>
+                <ul class="social-list">
+                  <li class="item">
+                    <a class="link" href="">
+                      <svg class="icon" width="40" height="40">
+                        <use href="'./images/icons.svg#icon-instagram"></use>
+                      </svg>
+                    </a>
+                  </li>
+                  <li class="item">
+                    <a class="link" href="">
+                      <svg class="icon" width="40" height="40">
+                        <use href="'./images/icons.svg#icon-twitter"></use>
+                      </svg>
+                    </a>
+                  </li>
+                  <li class="item">
+                    <a class="link" href="">
+                      <svg class="icon" width="40" height="40">
+                        <use href="'./images/icons.svg#icon-facebook"></use>
+                      </svg>
+                    </a>
+                  </li>
+                  <li class="item">
+                    <a class="link" href="">
+                      <svg class="icon" width="40" height="40">
+                        <use href="'./images/icons.svg#icon-linkedin"></use>
+                      </svg>
+                    </a>
+                  </li>
+                </ul>
               </div>
             </li>
             <li class="item">
@@ -184,22 +316,144 @@
               <div class="wripper">
                 <h3 class="name">Daniel Wilson</h3>
                 <p class="position">UI Designer</p>
+                <ul class="social-list">
+                  <li class="item">
+                    <a class="link" href="">
+                      <svg class="icon" width="40" height="40">
+                        <use href="'./images/icons.svg#icon-instagram"></use>
+                      </svg>
+                    </a>
+                  </li>
+                  <li class="item">
+                    <a class="link" href="">
+                      <svg class="icon" width="40" height="40">
+                        <use href="'./images/icons.svg#icon-twitter"></use>
+                      </svg>
+                    </a>
+                  </li>
+                  <li class="item">
+                    <a class="link" href="">
+                      <svg class="icon" width="40" height="40">
+                        <use href="'./images/icons.svg#icon-facebook"></use>
+                      </svg>
+                    </a>
+                  </li>
+                  <li class="item">
+                    <a class="link" href="">
+                      <svg class="icon" width="40" height="40">
+                        <use href="'./images/icons.svg#icon-linkedin"></use>
+                      </svg>
+                    </a>
+                  </li>
+                </ul>
               </div>
             </li>
           </ul>
         </div>
       </section>
+      <section class="customers">
+        <h2 class="title">Customers</h2>
+        <ul class="list">
+          <li class="item">
+            <a class="wripper">
+              <svg class="icon" width="104" height="56">
+                <use href="'./images/icons.svg#icon-Logo-1"></use>
+              </svg>
+            </a>
+          </li>
+          <li class="item">
+            <a class="wripper">
+              <svg class="icon" width="104" height="56">
+                <use href="'./images/icons.svg#icon-Logo-2"></use>
+              </svg>
+            </a>
+          </li>
+          <li class="item">
+            <a class="wripper">
+              <svg class="icon" width="104" height="56">
+                <use href="'./images/icons.svg#icon-Logo-3"></use>
+              </svg>
+            </a>
+          </li>
+          <li class="item">
+            <a class="wripper">
+              <svg class="icon" width="104" height="56">
+                <use href="'./images/icons.svg#icon-Logo-4"></use>
+              </svg>
+            </a>
+          </li>
+          <li class="item">
+            <a class="wripper">
+              <svg class="icon" width="104" height="56">
+                <use href="'./images/icons.svg#icon-Logo-5"></use>
+              </svg>
+            </a>
+          </li>
+          <li class="item">
+            <a class="wripper">
+              <svg class="icon" width="104" height="56">
+                <use href="'./images/icons.svg#icon-Logo-6"></use>
+              </svg>
+            </a>
+          </li>
+        </ul>
+      </section>
     </main>
     <footer class="footer">
       <div class="container">
-        <a class="logo-footer link" href="./index.html"
-          >Web<span class="acsent">Studio</span></a
-        >
-        <p class="text">
-          Increase the flow of customers and sales for your business with
-          digital marketing & growth solutions.
-        </p>
+        <div class="wripper">
+          <a class="logo-footer link" href="./index.html"
+            >Web<span class="acsent">Studio</span></a
+          >
+          <p class="text">
+            Increase the flow of customers and sales for your business with
+            digital marketing & growth solutions.
+          </p>
+        </div>
+        <div class="social-footer">
+          <p class="title">Social media</p>
+          <ul class="social-list">
+            <li class="item">
+              <a class="link" href="">
+                <svg class="icon" width="40" height="40">
+                  <use href="'./images/icons.svg#icon-instagram"></use>
+                </svg>
+              </a>
+            </li>
+            <li class="item">
+              <a class="link" href="">
+                <svg class="icon" width="40" height="40">
+                  <use href="'./images/icons.svg#icon-twitter"></use>
+                </svg>
+              </a>
+            </li>
+            <li class="item">
+              <a class="link" href="">
+                <svg class="icon" width="40" height="40">
+                  <use href="'./images/icons.svg#icon-facebook"></use>
+                </svg>
+              </a>
+            </li>
+            <li class="item">
+              <a class="link" href="">
+                <svg class="icon" width="40" height="40">
+                  <use href="'./images/icons.svg#icon-linkedin"></use>
+                </svg>
+              </a>
+            </li>
+          </ul>
+        </div>
       </div>
     </footer>
+    <div class="backdrop" data-modal>
+      <div class="modal">
+        <button class="close-button" type="button" data-modal-close>
+          <svg class="icon" width="24" height="24">
+            <use href="'./images/icons.svg#icon-close"></use>
+          </svg>
+        </button>
+      </div>
+    </div>
+    <script src="./js/modal.js"></script>
   </body>
 </html>
