--- a/portfolio.html
+++ b/portfolio.html
@@ -33,7 +33,7 @@
               <a href="./index.html" class="link">Studio</a>
             </li>
             <li class="item">
-              <a href="./portfolio.html" class="link">Portfolio</a>
+              <a href="./portfolio.html" class="link current">Portfolio</a>
             </li>
             <li class="item">
               <a href="" class="link">Contacts</a>
@@ -78,13 +78,20 @@
           <ul class="list">
             <li class="card">
               <a class="link" href="">
-                <img
-                  class="image"
-                  src="./images/portfolio/img-1.jpg"
-                  alt="Banking App Interface Concept"
-                  width="360"
-                  height="300"
-                />
+                <div class="overlay-wripper">
+                  <img
+                    class="image"
+                    src="./images/portfolio/img-1.jpg"
+                    alt="Banking App Interface Concept"
+                    width="360"
+                    height="300"
+                  />
+                  <p class="overlay">
+                    14 Stylish and User-Friendly App Design Concepts · Task
+                    Manager App · Calorie Tracker App · Exotic Fruit Ecommerce
+                    App· Cloud Storage App
+                  </p>
+                </div>
                 <div class="card-wripper">
                   <h2 class="title">Banking App Interface Concept</h2>
                   <p class="text">App</p>
@@ -93,13 +100,20 @@
             </li>
             <li class="card">
               <a class="link" href="">
-                <img
-                  class="image"
-                  src="./images/portfolio/img-2.jpg"
-                  alt="Cashless Payment"
-                  width="360"
-                  height="300"
-                />
+                <div class="overlay-wripper">
+                  <img
+                    class="image"
+                    src="./images/portfolio/img-2.jpg"
+                    alt="Cashless Payment"
+                    width="360"
+                    height="300"
+                  />
+                  <p class="overlay">
+                    14 Stylish and User-Friendly App Design Concepts · Task
+                    Manager App · Calorie Tracker App · Exotic Fruit Ecommerce
+                    App· Cloud Storage App
+                  </p>
+                </div>
                 <div class="card-wripper">
                   <h2 class="title">Cashless Payment</h2>
                   <p class="text">Marketing</p>
@@ -108,13 +122,20 @@
             </li>
             <li class="card">
               <a class="link" href="">
-                <img
-                  class="image"
-                  src="./images/portfolio/img-3.jpg"
-                  alt="Meditation App"
-                  width="360"
-                  height="300"
-                />
+                <div class="overlay-wripper">
+                  <img
+                    class="image"
+                    src="./images/portfolio/img-3.jpg"
+                    alt="Meditation App"
+                    width="360"
+                    height="300"
+                  />
+                  <p class="overlay">
+                    14 Stylish and User-Friendly App Design Concepts · Task
+                    Manager App · Calorie Tracker App · Exotic Fruit Ecommerce
+                    App· Cloud Storage App
+                  </p>
+                </div>
                 <div class="card-wripper">
                   <h2 class="title">Meditation App</h2>
                   <p class="text">App</p>
@@ -123,13 +144,20 @@
             </li>
             <li class="card">
               <a class="link" href="">
-                <img
-                  class="image"
-                  src="./images/portfolio/img-4.jpg"
-                  alt="Taxi Service"
-                  width="360"
-                  height="300"
-                />
+                <div class="overlay-wripper">
+                  <img
+                    class="image"
+                    src="./images/portfolio/img-4.jpg"
+                    alt="Taxi Service"
+                    width="360"
+                    height="300"
+                  />
+                  <p class="overlay">
+                    14 Stylish and User-Friendly App Design Concepts · Task
+                    Manager App · Calorie Tracker App · Exotic Fruit Ecommerce
+                    App· Cloud Storage App
+                  </p>
+                </div>
                 <div class="card-wripper">
                   <h2 class="title">Taxi Service</h2>
                   <p class="text">Marketing</p>
@@ -138,13 +166,20 @@
             </li>
             <li class="card">
               <a class="link" href="">
-                <img
-                  class="image"
-                  src="./images/portfolio/img-5.jpg"
-                  alt="Screen Illustrations"
-                  width="360"
-                  height="300"
-                />
+                <div class="overlay-wripper">
+                  <img
+                    class="image"
+                    src="./images/portfolio/img-5.jpg"
+                    alt="Screen Illustrations"
+                    width="360"
+                    height="300"
+                  />
+                  <p class="overlay">
+                    14 Stylish and User-Friendly App Design Concepts · Task
+                    Manager App · Calorie Tracker App · Exotic Fruit Ecommerce
+                    App· Cloud Storage App
+                  </p>
+                </div>
                 <div class="card-wripper">
                   <h2 class="title">Screen Illustrations</h2>
                   <p class="text">Design</p>
@@ -153,13 +188,20 @@
             </li>
             <li class="card">
               <a class="link" href="">
-                <img
-                  class="image"
-                  src="./images/portfolio/img-6.jpg"
-                  alt="Online Courses"
-                  width="360"
-                  height="300"
-                />
+                <div class="overlay-wripper">
+                  <img
+                    class="image"
+                    src="./images/portfolio/img-6.jpg"
+                    alt="Online Courses"
+                    width="360"
+                    height="300"
+                  />
+                  <p class="overlay">
+                    14 Stylish and User-Friendly App Design Concepts · Task
+                    Manager App · Calorie Tracker App · Exotic Fruit Ecommerce
+                    App· Cloud Storage App
+                  </p>
+                </div>
                 <div class="card-wripper">
                   <h2 class="title">Online Courses</h2>
                   <p class="text">Marketing</p>
@@ -168,13 +210,20 @@
             </li>
             <li class="card">
               <a class="link" href="">
-                <img
-                  class="image"
-                  src="./images/portfolio/img-7.jpg"
-                  alt="Instagram Stories Concept"
-                  width="360"
-                  height="300"
-                />
+                <div class="overlay-wripper">
+                  <img
+                    class="image"
+                    src="./images/portfolio/img-7.jpg"
+                    alt="Instagram Stories Concept"
+                    width="360"
+                    height="300"
+                  />
+                  <p class="overlay">
+                    14 Stylish and User-Friendly App Design Concepts · Task
+                    Manager App · Calorie Tracker App · Exotic Fruit Ecommerce
+                    App· Cloud Storage App
+                  </p>
+                </div>
                 <div class="card-wripper">
                   <h2 class="title">Instagram Stories Concept</h2>
                   <p class="text">Design</p>
@@ -183,13 +232,20 @@
             </li>
             <li class="card">
               <a class="link" href="">
-                <img
-                  class="image"
-                  src="./images/portfolio/img-8.jpg"
-                  alt="Organic Food"
-                  width="360"
-                  height="300"
-                />
+                <div class="overlay-wripper">
+                  <img
+                    class="image"
+                    src="./images/portfolio/img-8.jpg"
+                    alt="Organic Food"
+                    width="360"
+                    height="300"
+                  />
+                  <p class="overlay">
+                    14 Stylish and User-Friendly App Design Concepts · Task
+                    Manager App · Calorie Tracker App · Exotic Fruit Ecommerce
+                    App· Cloud Storage App
+                  </p>
+                </div>
                 <div class="card-wripper">
                   <h2 class="title">Organic Food</h2>
                   <p class="text">Web Site</p>
@@ -198,13 +254,20 @@
             </li>
             <li class="card">
               <a class="link" href="">
-                <img
-                  class="image"
-                  src="./images/portfolio/img-9.jpg"
-                  alt="Fresh Coffee"
-                  width="360"
-                  height="300"
-                />
+                <div class="overlay-wripper">
+                  <img
+                    class="image"
+                    src="./images/portfolio/img-9.jpg"
+                    alt="Fresh Coffee"
+                    width="360"
+                    height="300"
+                  />
+                  <p class="overlay">
+                    14 Stylish and User-Friendly App Design Concepts · Task
+                    Manager App · Calorie Tracker App · Exotic Fruit Ecommerce
+                    App· Cloud Storage App
+                  </p>
+                </div>
                 <div class="card-wripper">
                   <h2 class="title">Fresh Coffee</h2>
                   <p class="text">Web Site</p>
@@ -217,13 +280,48 @@
     </main>
     <footer class="footer">
       <div class="container">
-        <a class="logo-footer link" href="./index.html"
-          >Web<span class="acsent">Studio</span></a
-        >
-        <p class="text">
-          Increase the flow of customers and sales for your business with
-          digital marketing & growth solutions.
-        </p>
+        <div class="wripper">
+          <a class="logo-footer link" href="./index.html"
+            >Web<span class="acsent">Studio</span></a
+          >
+          <p class="text">
+            Increase the flow of customers and sales for your business with
+            digital marketing & growth solutions.
+          </p>
+        </div>
+        <div class="social-footer">
+          <p class="title">Social media</p>
+          <ul class="social-list">
+            <li class="item">
+              <a class="link" href="">
+                <svg class="icon" width="40" height="40">
+                  <use href="'./images/icons.svg#icon-instagram"></use>
+                </svg>
+              </a>
+            </li>
+            <li class="item">
+              <a class="link" href="">
+                <svg class="icon" width="40" height="40">
+                  <use href="'./images/icons.svg#icon-twitter"></use>
+                </svg>
+              </a>
+            </li>
+            <li class="item">
+              <a class="link" href="">
+                <svg class="icon" width="40" height="40">
+                  <use href="'./images/icons.svg#icon-facebook"></use>
+                </svg>
+              </a>
+            </li>
+            <li class="item">
+              <a class="link" href="">
+                <svg class="icon" width="40" height="40">
+                  <use href="'./images/icons.svg#icon-linkedin"></use>
+                </svg>
+              </a>
+            </li>
+          </ul>
+        </div>
       </div>
     </footer>
   </body>
