--- a/index.html
+++ b/index.html
@@ -168,48 +168,48 @@
                 <h3 class="name">Mark Guerrero</h3>
                 <p class="position">Product Designer</p>
                 <ul class="social-list">
-                  <li class="item">
+                  <li class="social-list-item">
                     <a class="link" href="">
                       <svg
-                        class="icon"
-                        width="40"
-                        height="40"
+                        class="social-icon"
+                        width="16"
+                        height="16"
                         aria-label="instagram icon"
                       >
                         <use href="'./images/icons.svg#icon-instagram"></use>
                       </svg>
                     </a>
                   </li>
-                  <li class="item">
+                  <li class="social-list-item">
                     <a class="link" href="">
                       <svg
-                        class="icon"
-                        width="40"
-                        height="40"
+                        class="social-icon"
+                        width="16"
+                        height="16"
                         aria-label="twitter icon"
                       >
                         <use href="'./images/icons.svg#icon-twitter"></use>
                       </svg>
                     </a>
                   </li>
-                  <li class="item">
+                  <li class="social-list-item">
                     <a class="link" href="">
                       <svg
-                        class="icon"
-                        width="40"
-                        height="40"
+                        class="social-icon"
+                        width="16"
+                        height="16"
                         aria-label="facebook icon"
                       >
                         <use href="'./images/icons.svg#icon-facebook"></use>
                       </svg>
                     </a>
                   </li>
-                  <li class="item">
+                  <li class="social-list-item">
                     <a class="link" href="">
                       <svg
-                        class="icon"
-                        width="40"
-                        height="40"
+                        class="social-icon"
+                        width="16"
+                        height="16"
                         aria-label="linkedin icon"
                       >
                         <use href="'./images/icons.svg#icon-linkedin"></use>
@@ -231,30 +231,50 @@
                 <h3 class="name">Tom Ford</h3>
                 <p class="position">Frontend Developer</p>
                 <ul class="social-list">
-                  <li class="item">
+                  <li class="social-list-item">
                     <a class="link" href="">
-                      <svg class="icon" width="40" height="40">
+                      <svg
+                        class="social-icon"
+                        width="16"
+                        height="16"
+                        aria-label="instagram icon"
+                      >
                         <use href="'./images/icons.svg#icon-instagram"></use>
                       </svg>
                     </a>
                   </li>
-                  <li class="item">
+                  <li class="social-list-item">
                     <a class="link" href="">
-                      <svg class="icon" width="40" height="40">
+                      <svg
+                        class="social-icon"
+                        width="16"
+                        height="16"
+                        aria-label="twitter icon"
+                      >
                         <use href="'./images/icons.svg#icon-twitter"></use>
                       </svg>
                     </a>
                   </li>
-                  <li class="item">
+                  <li class="social-list-item">
                     <a class="link" href="">
-                      <svg class="icon" width="40" height="40">
+                      <svg
+                        class="social-icon"
+                        width="16"
+                        height="16"
+                        aria-label="facebook icon"
+                      >
                         <use href="'./images/icons.svg#icon-facebook"></use>
                       </svg>
                     </a>
                   </li>
-                  <li class="item">
+                  <li class="social-list-item">
                     <a class="link" href="">
-                      <svg class="icon" width="40" height="40">
+                      <svg
+                        class="social-icon"
+                        width="16"
+                        height="16"
+                        aria-label="linkedin icon"
+                      >
                         <use href="'./images/icons.svg#icon-linkedin"></use>
                       </svg>
                     </a>
@@ -274,30 +294,50 @@
                 <h3 class="name">Camila Garcia</h3>
                 <p class="position">Marketing</p>
                 <ul class="social-list">
-                  <li class="item">
+                  <li class="social-list-item">
                     <a class="link" href="">
-                      <svg class="icon" width="40" height="40">
+                      <svg
+                        class="social-icon"
+                        width="16"
+                        height="16"
+                        aria-label="instagram icon"
+                      >
                         <use href="'./images/icons.svg#icon-instagram"></use>
                       </svg>
                     </a>
                   </li>
-                  <li class="item">
+                  <li class="social-list-item">
                     <a class="link" href="">
-                      <svg class="icon" width="40" height="40">
+                      <svg
+                        class="social-icon"
+                        width="16"
+                        height="16"
+                        aria-label="twitter icon"
+                      >
                         <use href="'./images/icons.svg#icon-twitter"></use>
                       </svg>
                     </a>
                   </li>
-                  <li class="item">
+                  <li class="social-list-item">
                     <a class="link" href="">
-                      <svg class="icon" width="40" height="40">
+                      <svg
+                        class="social-icon"
+                        width="16"
+                        height="16"
+                        aria-label="facebook icon"
+                      >
                         <use href="'./images/icons.svg#icon-facebook"></use>
                       </svg>
                     </a>
                   </li>
-                  <li class="item">
+                  <li class="social-list-item">
                     <a class="link" href="">
-                      <svg class="icon" width="40" height="40">
+                      <svg
+                        class="social-icon"
+                        width="16"
+                        height="16"
+                        aria-label="linkedin icon"
+                      >
                         <use href="'./images/icons.svg#icon-linkedin"></use>
                       </svg>
                     </a>
@@ -317,30 +357,50 @@
                 <h3 class="name">Daniel Wilson</h3>
                 <p class="position">UI Designer</p>
                 <ul class="social-list">
-                  <li class="item">
+                  <li class="social-list-item">
                     <a class="link" href="">
-                      <svg class="icon" width="40" height="40">
+                      <svg
+                        class="social-icon"
+                        width="16"
+                        height="16"
+                        aria-label="instagram icon"
+                      >
                         <use href="'./images/icons.svg#icon-instagram"></use>
                       </svg>
                     </a>
                   </li>
-                  <li class="item">
+                  <li class="social-list-item">
                     <a class="link" href="">
-                      <svg class="icon" width="40" height="40">
+                      <svg
+                        class="social-icon"
+                        width="16"
+                        height="16"
+                        aria-label="twitter icon"
+                      >
                         <use href="'./images/icons.svg#icon-twitter"></use>
                       </svg>
                     </a>
                   </li>
-                  <li class="item">
+                  <li class="social-list-item">
                     <a class="link" href="">
-                      <svg class="icon" width="40" height="40">
+                      <svg
+                        class="social-icon"
+                        width="16"
+                        height="16"
+                        aria-label="facebook icon"
+                      >
                         <use href="'./images/icons.svg#icon-facebook"></use>
                       </svg>
                     </a>
                   </li>
-                  <li class="item">
+                  <li class="social-list-item">
                     <a class="link" href="">
-                      <svg class="icon" width="40" height="40">
+                      <svg
+                        class="social-icon"
+                        width="16"
+                        height="16"
+                        aria-label="linkedin icon"
+                      >
                         <use href="'./images/icons.svg#icon-linkedin"></use>
                       </svg>
                     </a>
@@ -352,51 +412,53 @@
         </div>
       </section>
       <section class="customers">
-        <h2 class="title">Customers</h2>
-        <ul class="list">
-          <li class="item">
-            <a class="wripper">
-              <svg class="icon" width="104" height="56">
-                <use href="'./images/icons.svg#icon-Logo-1"></use>
-              </svg>
-            </a>
-          </li>
-          <li class="item">
-            <a class="wripper">
-              <svg class="icon" width="104" height="56">
-                <use href="'./images/icons.svg#icon-Logo-2"></use>
-              </svg>
-            </a>
-          </li>
-          <li class="item">
-            <a class="wripper">
-              <svg class="icon" width="104" height="56">
-                <use href="'./images/icons.svg#icon-Logo-3"></use>
-              </svg>
-            </a>
-          </li>
-          <li class="item">
-            <a class="wripper">
-              <svg class="icon" width="104" height="56">
-                <use href="'./images/icons.svg#icon-Logo-4"></use>
-              </svg>
-            </a>
-          </li>
-          <li class="item">
-            <a class="wripper">
-              <svg class="icon" width="104" height="56">
-                <use href="'./images/icons.svg#icon-Logo-5"></use>
-              </svg>
-            </a>
-          </li>
-          <li class="item">
-            <a class="wripper">
-              <svg class="icon" width="104" height="56">
-                <use href="'./images/icons.svg#icon-Logo-6"></use>
-              </svg>
-            </a>
-          </li>
-        </ul>
+        <div class="container">
+          <h2 class="title">Customers</h2>
+          <ul class="list">
+            <li class="item">
+              <a class="link">
+                <svg class="icon" width="104" height="56">
+                  <use href="'./images/icons.svg#icon-Logo-1"></use>
+                </svg>
+              </a>
+            </li>
+            <li class="item">
+              <a class="link">
+                <svg class="icon" width="104" height="56">
+                  <use href="'./images/icons.svg#icon-Logo-2"></use>
+                </svg>
+              </a>
+            </li>
+            <li class="item">
+              <a class="link">
+                <svg class="icon" width="104" height="56">
+                  <use href="'./images/icons.svg#icon-Logo-3"></use>
+                </svg>
+              </a>
+            </li>
+            <li class="item">
+              <a class="link">
+                <svg class="icon" width="104" height="56">
+                  <use href="'./images/icons.svg#icon-Logo-4"></use>
+                </svg>
+              </a>
+            </li>
+            <li class="item">
+              <a class="link">
+                <svg class="icon" width="104" height="56">
+                  <use href="'./images/icons.svg#icon-Logo-5"></use>
+                </svg>
+              </a>
+            </li>
+            <li class="item">
+              <a class="link">
+                <svg class="icon" width="104" height="56">
+                  <use href="'./images/icons.svg#icon-Logo-6"></use>
+                </svg>
+              </a>
+            </li>
+          </ul>
+        </div>
       </section>
     </main>
     <footer class="footer">
@@ -415,28 +477,28 @@
           <ul class="social-list">
             <li class="item">
               <a class="link" href="">
-                <svg class="icon" width="40" height="40">
+                <svg class="icon" width="24" height="24">
                   <use href="'./images/icons.svg#icon-instagram"></use>
                 </svg>
               </a>
             </li>
             <li class="item">
               <a class="link" href="">
-                <svg class="icon" width="40" height="40">
+                <svg class="icon" width="24" height="24">
                   <use href="'./images/icons.svg#icon-twitter"></use>
                 </svg>
               </a>
             </li>
             <li class="item">
               <a class="link" href="">
-                <svg class="icon" width="40" height="40">
+                <svg class="icon" width="24" height="24">
                   <use href="'./images/icons.svg#icon-facebook"></use>
                 </svg>
               </a>
             </li>
             <li class="item">
               <a class="link" href="">
-                <svg class="icon" width="40" height="40">
+                <svg class="icon" width="24" height="24">
                   <use href="'./images/icons.svg#icon-linkedin"></use>
                 </svg>
               </a>
@@ -445,10 +507,10 @@
         </div>
       </div>
     </footer>
-    <div class="backdrop" data-modal>
+    <div class="backdrop is-hidden" data-modal>
       <div class="modal">
         <button class="close-button" type="button" data-modal-close>
-          <svg class="icon" width="24" height="24">
+          <svg class="icon" width="8" height="8">
             <use href="'./images/icons.svg#icon-close"></use>
           </svg>
         </button>
