--- a/index.html
+++ b/index.html
@@ -70,7 +70,7 @@
             <li class="item">
               <div class="wripper">
                 <svg class="icon" width="64" height="64">
-                  <use href="'./images/icons.svg#icon-antenna"></use>
+                  <use href="./images/icons.svg#icon-antenna"></use>
                 </svg>
               </div>
               <h3 class="title">Strategy</h3>
@@ -82,7 +82,7 @@
             <li class="item">
               <div class="wripper">
                 <svg class="icon" width="64" height="64">
-                  <use href="'./images/icons.svg#icon-clock"></use>
+                  <use href="./images/icons.svg#icon-clock"></use>
                 </svg>
               </div>
               <h3 class="title">Punctuality</h3>
@@ -94,7 +94,7 @@
             <li class="item">
               <div class="wripper">
                 <svg class="icon" width="64" height="64">
-                  <use href="'./images/icons.svg#icon-diagram"></use>
+                  <use href="./images/icons.svg#icon-diagram"></use>
                 </svg>
               </div>
               <h3 class="title">Diligence</h3>
@@ -106,7 +106,7 @@
             <li class="item">
               <div class="wripper">
                 <svg class="icon" width="64" height="64">
-                  <use href="'./images/icons.svg#icon-astronaut"></use>
+                  <use href="./images/icons.svg#icon-astronaut"></use>
                 </svg>
               </div>
               <h3 class="title">Technologies</h3>
@@ -176,7 +176,7 @@
                         height="16"
                         aria-label="instagram icon"
                       >
-                        <use href="'./images/icons.svg#icon-instagram"></use>
+                        <use href="./images/icons.svg#icon-instagram"></use>
                       </svg>
                     </a>
                   </li>
@@ -188,7 +188,7 @@
                         height="16"
                         aria-label="twitter icon"
                       >
-                        <use href="'./images/icons.svg#icon-twitter"></use>
+                        <use href="./images/icons.svg#icon-twitter"></use>
                       </svg>
                     </a>
                   </li>
@@ -200,7 +200,7 @@
                         height="16"
                         aria-label="facebook icon"
                       >
-                        <use href="'./images/icons.svg#icon-facebook"></use>
+                        <use href="./images/icons.svg#icon-facebook"></use>
                       </svg>
                     </a>
                   </li>
@@ -212,7 +212,7 @@
                         height="16"
                         aria-label="linkedin icon"
                       >
-                        <use href="'./images/icons.svg#icon-linkedin"></use>
+                        <use href="./images/icons.svg#icon-linkedin"></use>
                       </svg>
                     </a>
                   </li>
@@ -239,7 +239,7 @@
                         height="16"
                         aria-label="instagram icon"
                       >
-                        <use href="'./images/icons.svg#icon-instagram"></use>
+                        <use href="./images/icons.svg#icon-instagram"></use>
                       </svg>
                     </a>
                   </li>
@@ -251,7 +251,7 @@
                         height="16"
                         aria-label="twitter icon"
                       >
-                        <use href="'./images/icons.svg#icon-twitter"></use>
+                        <use href="./images/icons.svg#icon-twitter"></use>
                       </svg>
                     </a>
                   </li>
@@ -263,7 +263,7 @@
                         height="16"
                         aria-label="facebook icon"
                       >
-                        <use href="'./images/icons.svg#icon-facebook"></use>
+                        <use href="./images/icons.svg#icon-facebook"></use>
                       </svg>
                     </a>
                   </li>
@@ -275,7 +275,7 @@
                         height="16"
                         aria-label="linkedin icon"
                       >
-                        <use href="'./images/icons.svg#icon-linkedin"></use>
+                        <use href="./images/icons.svg#icon-linkedin"></use>
                       </svg>
                     </a>
                   </li>
@@ -302,7 +302,7 @@
                         height="16"
                         aria-label="instagram icon"
                       >
-                        <use href="'./images/icons.svg#icon-instagram"></use>
+                        <use href="./images/icons.svg#icon-instagram"></use>
                       </svg>
                     </a>
                   </li>
@@ -314,7 +314,7 @@
                         height="16"
                         aria-label="twitter icon"
                       >
-                        <use href="'./images/icons.svg#icon-twitter"></use>
+                        <use href="./images/icons.svg#icon-twitter"></use>
                       </svg>
                     </a>
                   </li>
@@ -326,7 +326,7 @@
                         height="16"
                         aria-label="facebook icon"
                       >
-                        <use href="'./images/icons.svg#icon-facebook"></use>
+                        <use href="./images/icons.svg#icon-facebook"></use>
                       </svg>
                     </a>
                   </li>
@@ -338,7 +338,7 @@
                         height="16"
                         aria-label="linkedin icon"
                       >
-                        <use href="'./images/icons.svg#icon-linkedin"></use>
+                        <use href="./images/icons.svg#icon-linkedin"></use>
                       </svg>
                     </a>
                   </li>
@@ -365,7 +365,7 @@
                         height="16"
                         aria-label="instagram icon"
                       >
-                        <use href="'./images/icons.svg#icon-instagram"></use>
+                        <use href="./images/icons.svg#icon-instagram"></use>
                       </svg>
                     </a>
                   </li>
@@ -377,7 +377,7 @@
                         height="16"
                         aria-label="twitter icon"
                       >
-                        <use href="'./images/icons.svg#icon-twitter"></use>
+                        <use href="./images/icons.svg#icon-twitter"></use>
                       </svg>
                     </a>
                   </li>
@@ -389,7 +389,7 @@
                         height="16"
                         aria-label="facebook icon"
                       >
-                        <use href="'./images/icons.svg#icon-facebook"></use>
+                        <use href="./images/icons.svg#icon-facebook"></use>
                       </svg>
                     </a>
                   </li>
@@ -401,7 +401,7 @@
                         height="16"
                         aria-label="linkedin icon"
                       >
-                        <use href="'./images/icons.svg#icon-linkedin"></use>
+                        <use href="./images/icons.svg#icon-linkedin"></use>
                       </svg>
                     </a>
                   </li>
@@ -418,42 +418,42 @@
             <li class="item">
               <a class="link">
                 <svg class="icon" width="104" height="56">
-                  <use href="'./images/icons.svg#icon-Logo-1"></use>
+                  <use href="./images/icons.svg#icon-Logo-1"></use>
                 </svg>
               </a>
             </li>
             <li class="item">
               <a class="link">
                 <svg class="icon" width="104" height="56">
-                  <use href="'./images/icons.svg#icon-Logo-2"></use>
+                  <use href="./images/icons.svg#icon-Logo-2"></use>
                 </svg>
               </a>
             </li>
             <li class="item">
               <a class="link">
                 <svg class="icon" width="104" height="56">
-                  <use href="'./images/icons.svg#icon-Logo-3"></use>
+                  <use href="./images/icons.svg#icon-Logo-3"></use>
                 </svg>
               </a>
             </li>
             <li class="item">
               <a class="link">
                 <svg class="icon" width="104" height="56">
-                  <use href="'./images/icons.svg#icon-Logo-4"></use>
+                  <use href="./images/icons.svg#icon-Logo-4"></use>
                 </svg>
               </a>
             </li>
             <li class="item">
               <a class="link">
                 <svg class="icon" width="104" height="56">
-                  <use href="'./images/icons.svg#icon-Logo-5"></use>
+                  <use href="./images/icons.svg#icon-Logo-5"></use>
                 </svg>
               </a>
             </li>
             <li class="item">
               <a class="link">
                 <svg class="icon" width="104" height="56">
-                  <use href="'./images/icons.svg#icon-Logo-6"></use>
+                  <use href="./images/icons.svg#icon-Logo-6"></use>
                 </svg>
               </a>
             </li>
@@ -478,28 +478,28 @@
             <li class="item">
               <a class="link" href="">
                 <svg class="icon" width="24" height="24">
-                  <use href="'./images/icons.svg#icon-instagram"></use>
+                  <use href="./images/icons.svg#icon-instagram"></use>
                 </svg>
               </a>
             </li>
             <li class="item">
               <a class="link" href="">
                 <svg class="icon" width="24" height="24">
-                  <use href="'./images/icons.svg#icon-twitter"></use>
+                  <use href="./images/icons.svg#icon-twitter"></use>
                 </svg>
               </a>
             </li>
             <li class="item">
               <a class="link" href="">
                 <svg class="icon" width="24" height="24">
-                  <use href="'./images/icons.svg#icon-facebook"></use>
+                  <use href="./images/icons.svg#icon-facebook"></use>
                 </svg>
               </a>
             </li>
             <li class="item">
               <a class="link" href="">
                 <svg class="icon" width="24" height="24">
-                  <use href="'./images/icons.svg#icon-linkedin"></use>
+                  <use href="./images/icons.svg#icon-linkedin"></use>
                 </svg>
               </a>
             </li>
@@ -511,7 +511,7 @@
       <div class="modal">
         <button class="close-button" type="button" data-modal-close>
           <svg class="icon" width="8" height="8">
-            <use href="'./images/icons.svg#icon-close"></use>
+            <use href="./images/icons.svg#icon-close"></use>
           </svg>
         </button>
       </div>
