--- a/portfolio.html
+++ b/portfolio.html
@@ -295,28 +295,28 @@
             <li class="item">
               <a class="link" href="">
                 <svg class="icon" width="24" height="24">
-                  <use href="'./images/icons.svg#icon-instagram"></use>
+                  <use href="./images/icons.svg#icon-instagram"></use>
                 </svg>
               </a>
             </li>
             <li class="item">
               <a class="link" href="">
                 <svg class="icon" width="24" height="24">
-                  <use href="'./images/icons.svg#icon-twitter"></use>
+                  <use href="./images/icons.svg#icon-twitter"></use>
                 </svg>
               </a>
             </li>
             <li class="item">
               <a class="link" href="">
                 <svg class="icon" width="24" height="24">
-                  <use href="'./images/icons.svg#icon-facebook"></use>
+                  <use href="./images/icons.svg#icon-facebook"></use>
                 </svg>
               </a>
             </li>
             <li class="item">
               <a class="link" href="">
                 <svg class="icon" width="24" height="24">
-                  <use href="'./images/icons.svg#icon-linkedin"></use>
+                  <use href="./images/icons.svg#icon-linkedin"></use>
                 </svg>
               </a>
             </li>
