--- a/index.html
+++ b/index.html
@@ -416,42 +416,42 @@
           <h2 class="title">Customers</h2>
           <ul class="list">
             <li class="item">
-              <a class="link">
+              <a class="link" href="">
                 <svg class="icon" width="104" height="56">
                   <use href="./images/icons.svg#icon-Logo-1"></use>
                 </svg>
               </a>
             </li>
             <li class="item">
-              <a class="link">
+              <a class="link" href="">
                 <svg class="icon" width="104" height="56">
                   <use href="./images/icons.svg#icon-Logo-2"></use>
                 </svg>
               </a>
             </li>
             <li class="item">
-              <a class="link">
+              <a class="link" href="">
                 <svg class="icon" width="104" height="56">
                   <use href="./images/icons.svg#icon-Logo-3"></use>
                 </svg>
               </a>
             </li>
             <li class="item">
-              <a class="link">
+              <a class="link" href="">
                 <svg class="icon" width="104" height="56">
                   <use href="./images/icons.svg#icon-Logo-4"></use>
                 </svg>
               </a>
             </li>
             <li class="item">
-              <a class="link">
+              <a class="link" href="">
                 <svg class="icon" width="104" height="56">
                   <use href="./images/icons.svg#icon-Logo-5"></use>
                 </svg>
               </a>
             </li>
             <li class="item">
-              <a class="link">
+              <a class="link" href="">
                 <svg class="icon" width="104" height="56">
                   <use href="./images/icons.svg#icon-Logo-6"></use>
                 </svg>
